[package]
name = "nassauer-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
nassauer-common = { path = "../nassauer-common" }
network-types = "0.0.8"

[build-dependencies]
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }


[[bin]]
name = "nassauer-ebpf"
path = "src/main.rs"
